--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "google-spreadsheet": "^3.0.13",
     "helmet": "^3.23.3",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.10"
   },
