--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.4.10"
+    "nodemailer": "^6.4.10",
+    "rs-user": "git+ssh://git@lab.rumsan.net:rs/user.git"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
