--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^5.7.2",
     "react-iframe": "1.3.0",
     "react-perfect-scrollbar": "1.2.0",
+    "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-select": "^2.2.0",
