--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Askbhunte",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "axios-mock-adapter": "^1.18.1",
     "lodash": "^4.17.19",
     "mixin-deep": "^2.0.1",
