--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^5.7.2",
     "react-iframe": "1.3.0",
     "react-perfect-scrollbar": "1.2.0",
+    "react-quill": "^1.3.5",
     "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
