--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.10",
-    "rs-user": "git+ssh://git@lab.rumsan.net:rs/user.git"
+    "rs-user": "git+ssh://git@lab.rumsan.net:rs/user.git",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
