--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "axios": "^0.19.2",
     "feather-icons-react": "^0.4.1",
-    "formik": "^1.5.8",
     "history": "4.7.2",
     "joi": "^13.7.0",
     "joi-validation-strategy": "^0.3.3",
@@ -42,8 +41,7 @@
     "react-select": "^2.2.0",
     "react-toast-notifications": "^2.4.0",
     "reactstrap": "^8.4.1",
-    "sweetalert2": "^9.17.2",
-    "yup": "^0.29.3"
+    "sweetalert2": "^9.17.2"
   },
   "browserslist": [
     ">0.2%",
