--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-aws-s3": "^1.5.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
     "react-iframe": "1.3.0",
