--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "build": "NODE_ENV=production && yarn install && cd ./client && yarn install && yarn run build"
   },
   "dependencies": {
+    "aws-sdk": "^2.904.0",
     "config": "^3.3.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "fs": "^0.0.1-security",
     "google-spreadsheet": "^3.0.13",
     "helmet": "^3.23.3",
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
+    "path": "^0.12.7",
     "rs-user": "git+ssh://git@lab.rumsan.net:rs/user.git",
     "slugify": "^1.4.6"
   },
