--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "node": "^8.15.0"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^27.1.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "axios": "^0.19.2",
     "feather-icons-react": "^0.4.1",
     "history": "4.7.2",
