--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "google-spreadsheet": "^3.0.13",
     "helmet": "^3.23.3",
     "http-errors": "~1.6.3",
+    "ipfs-only-hash": "^4.0.0",
     "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
