preference support for analytics and category

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "production": "NODE_ENV=production node ./bin/www",
     "client": "cd ./client && yarn start",
     "all": "npm-run-all -p start client",
-    "build": "NODE_ENV=production && yarn install && cd ./client && yarn install && yarn run build"
+    "build": "NODE_ENV=production && yarn install && cd ./client && yarn install && yarn run build",
+    "format": "prettier -w ."
   },
   "dependencies": {
     "aws-sdk": "^2.904.0",
@@ -32,8 +33,11 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.4.0"
   }
 }
